<resources>
    <string name="app_name">NewsApp</string>
    <string name="search">Search..</string>
    <string name="see_all">See All</string>
    <string name="latest_news">Latest News</string>
    <string name="news_image">news image</string>
    <string name="filter">filter</string>
    <string name="author">Author</string>
    <string name="date">9 sep 2020</string>
    <string name="details">details\n</string>
</resources>