<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewsActivity">

        <ImageView
            android:id="@+id/imgNews"
            android:layout_width="0dp"
            android:layout_height="260dp"
            android:alpha="0.8"
            android:contentDescription="@string/news_image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imgNews"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="@dimen/margin_xx"
            app:icon="@drawable/baseline_arrow_back_24"
            app:iconSize="15dp"
            app:iconGravity="textStart"
            android:padding="0dp"
            app:iconPadding="0dp"
            android:insetTop="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/light_gray_alpha"
            app:iconTint="@color/black"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/LatestCardViewStyle"
            android:backgroundTint="@color/light_gray_alpha3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xxx"
            android:layout_marginEnd="@dimen/margin_xxx"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_xx"
                android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/text_style"
                android:fontFamily="@font/playfair"
                android:textStyle="bold"
                android:textSize="@dimen/txt_xx"
                android:text="@string/date" />

             <TextView
                android:id="@+id/tvAuthor"
                style="@style/text_style"
                 android:fontFamily="@font/playfair"
                 android:textStyle="bold"
                android:textSize="@dimen/txt_xx"
                android:text="@string/author" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/text_style"
                android:fontFamily="@font/playfair"
                android:textStyle="bold"
                android:textSize="@dimen/txt_xx"
                android:text= "Publish at -  " />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/circualr_layout">

                <TextView
                    android:id="@+id/tvNewsDetails"
                    style="@style/text_style"
                    android:layout_margin="@dimen/margin_xx"
                    android:textSize="@dimen/txt_xx"
                    android:text="@string/details" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>